# taraxa-evm

./: .dockerignore  .gitignore  .gitmodules  .tmp_files  Dockerfile  Jenkinsfile  Makefile  README.md  benchmark_test.go  c_test_main.c  c_test_main.h  ctypes.h  go.mod  go.sum  interfaces.go  lib_c.go  lib_cgo.go  notes.txt  pub_sub.patch  sandbox.go  sandbox.json
TaraxaGTests/: CMakeLists.txt  README.md  results.lst
TaraxaGTests/include/: Process.h  ProcessTest.h
accounts/abi/: abi.go  abi_test.go  argument.go  event.go  event_test.go  method.go  numbers.go  pack.go  pack_test.go  package.go  reflect.go  type.go  type_test.go  unpack.go  unpack_test.go
cmd/evm/: compiler.go  disasm.go  main.go  runner.go  statedb_ext.go  staterunner.go
cmd/utils/: cmd.go  customflags.go  customflags_test.go  flags.go
common/: big.go  bytes.go  debug.go  path.go  test_utils.go  types.go  types_test.go
common/bitutil/: compress_test.go
common/compiler/: solidity.go  solidity_test.go
common/hexutil/: hexutil.go  json_example_test.go
common/math/: big.go  big_test.go  integer.go
common/mclock/: mclock.go
consensus/: consensus.go  errors.go
consensus/ethash/: algorithm.go  algorithm_test.go  api.go  consensus.go  consensus_test.go  ethash.go  ethash_test.go  sealer.go  sealer_test.go
consensus/misc/: dao.go  forks.go
core/: blockchain_insert.go  blocks.go  error.go  events.go  evm.go  gaspool.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis_alloc.go  mkalloc.go  state_transition.go  tx_cacher.go  tx_journal.go  tx_pool.go  types.go
core/asm/: asm.go  compiler.go
core/bloombits/: generator.go  generator_test.go  matcher.go  matcher_test.go
core/rawdb/: accessors_chain.go  accessors_chain_test.go  accessors_indexes.go  accessors_indexes_test.go  accessors_metadata.go  interfaces.go  schema.go
core/state/: database.go  dump.go  encoding.go  iterator.go  iterator_test.go  journal.go  managed_state.go  managed_state_test.go  state_object.go  state_test.go  statedb.go  statedb_test.go  sync.go  sync_test.go
core/types/: block.go  block_test.go  bloom9.go  common.go  derive_sha.go  gen_header_json.go  gen_log_json.go  gen_receipt_json.go  gen_tx_json.go  log.go  log_test.go  receipt.go  transaction.go  transaction_signing.go  transaction_signing_test.go  transaction_test.go
core/vm/: analysis.go  analysis_test.go  common.go  constants.go  contract.go  contracts.go  contracts_test.go  doc.go  eips.go  errors.go  evm.go  gas.go  gas_table.go  gen_structlog.go  instructions.go  instructions_test.go  interface.go  interpreter.go  intpool.go  intpool_test.go  jump_table.go  log_record.go  logger.go  logger_json.go  logger_test.go  memory.go  memory_table.go  memory_test.go  oelogger.go  opcodes.go  stack.go  stack_table.go
crypto/: crypto.go  crypto_test.go  signature_cgo.go  signature_nocgo.go  signature_test.go
crypto/bn256/: bn256_fast.go  bn256_fuzz.go  bn256_slow.go
docker/: README.md  docker-compose.yml
ethdb/: database.go  database_js_test.go  database_test.go  interface.go  memory_database.go  rpc_database.go
grpc/: README.md
lib_cpp/: .gitignore  CMakeLists.txt  README.md
lib_cpp/contracts/: README.md  package.json
lib_cpp/include/taraxa_evm/: cgo_bridge.hpp  cgo_imports.h  contracts.hpp  lib.hpp  paths.hpp  util_io.hpp  util_json.hpp  util_str.hpp
lib_cpp/src/: lib.cpp  tests.cpp
local/: globals.go
log/: format.go  handler.go  logger.go  root.go
main/: README.md  cgo_exports.go  cgo_imports.c  cgo_imports.h  main.go  state_processor.go  state_processor_test.go  statedb_util.go  types.go
metrics/: counter.go  debug.go  disk_nop.go  graphite.go  healthcheck.go  json.go  log.go  meter.go  metrics.go  registry.go  resetting_timer.go  runtime.go  sample.go  syslog.go  timer.go  writer.go
misc/: eth_db_adapter.go  index.go
params/: config.go  dao.go  protocol_params.go  version.go
rlp/: decode.go  decode_test.go  encode.go  encode_test.go  encoder_example_test.go  map_test.go  raw.go  typecache.go
rpc/: errors.go  json.go  types.go  types_test.go
sandbox/: sandbox_1.go  sandbox_test.go
taraxa/: README.md  main.go  types.go
taraxa/C/: misc.go  (+5 more)
taraxa_vm/: main.go  state_processor.go  state_processor_test.go  statedb_util.go  types.go
tests/: gen_stenv.go  gen_sttransaction.go  gen_tttransaction.go  gen_vmexec.go  init.go  init_test.go  rlp_test_util.go  state_test.go  state_test_util.go  transaction_test.go  transaction_test_util.go  vm_test.go  vm_test_util.go
tests_integration/: .gitignore  CMakeLists.txt  README.md  grpc_tests.cpp  main.cpp  server.cpp  vm_tests.cpp
tests_integration/contracts/: cli.js  package-lock.json  solc_out.json
tests_integration/contracts/src/: SingleVariable.sol
tests_integration/include/: Process.h  ProcessTest.h  StateDBClient.h  StateDBMockServer.h  grpcClient.h  grpcIntegrity.h  grpcServer.h  grpc_util.hpp  paths.hpp
tests_integration/include/taraxa/: StateDBClient.hpp  StateDBMockServer.hpp  contracts.hpp  evm.hpp  paths.hpp  util_grpc.hpp  util_io.hpp  util_json.hpp  util_str.hpp
tests_integration/include/taraxa/tests/: evm_cli_mem_db.hpp  index.hpp  mock_grpc_server.hpp
tests_integration/include/tests/: evm_cli_mem_db.hpp  mock_grpc_server.hpp
tests_integration/proto-src/: statedb.grpc.pb.cc  statedb.grpc.pb.h  statedb.pb.h  statedb_mock.grpc.pb.h
tests_integration/resources/contracts/: single_variable.sol
tests_integration/src/: foo.cpp  grpc_tests.cpp  main.cpp  mock_server.cpp  server.cpp  tests.cpp  vm_tests.cpp
tests_perf/: .dockerignore  .gitignore  Dockerfile  __main__.py  docker_env_shell.sh  foo.py  foo.txt  fooo.py  git_docker_machine_sync.py  install.py  paths.py  requirements.txt  run_env.sh  sandbox.py  sandbox1.py  taraxa-perf-test-creds.json
trie/: database.go  debug.go  default_storage_strategy.go  encoding.go  errors.go  hasher.go  iterator.go  iterator_test.go  key_hashing_storage_strategy.go  metrics.go  node.go  proof.go  proof_test.go  secure_trie.go  secure_trie_test.go  sync.go  sync_test.go  trie.go  trie_test.go  util.go  util_dot.go
(+520 files in other folders)
